--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,3 +3,8 @@
 @import "header";
 @import "intro";
 @import "collection";
+@import "collection2018";
+@import "new";
+@import "brands";
+@import "media";
+@import "footer";
